# 1term

./: .gitignore  1term.c  1term.desktop  DESIGN.md  HACKING.md  README.md  TODO.md  asan.supp  meson.build
.github/workflows/: c-cpp.yml
assets/desktop/: 1term.desktop
docs/: BENCHMARKS.md  DEVELOPMENT.md  INSTALL.md  KEYBINDINGS.md
old/: 1term.c
src/: 1term.h  clipboard.c  clipboard.h  colors.h  main.c  tab.c  tab.h  terminal.c  terminal.h  window.c  window.h
